Complete happy path now working

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -3,6 +3,7 @@ webgriffe_sylius_klarna:
         processing_payment: 'Your payment is being processed!'
         please_wait: 'Please wait until you see a new status page!'
         loading: 'Loading'
+        return_to_klarna_checkout: '<a href="{redirectUrl}">Click here if you want to return to Klarna checkout to complete your payment.</a>'
     form:
         gateway_configuration:
             merchant_key: 'Merchant key'
