--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -3,7 +3,7 @@ webgriffe_sylius_klarna_payments:
         processing_payment: 'Nous traitons votre paiement!'
         please_wait: 'Veuillez attendre de voir une nouvelle page de statut!'
         loading: 'Chargement en cours'
-        return_to_klarna_checkout: '<a href="{redirectUrl}">Cliquez ici si vous souhaitez revenir à la caisse Klarna pour finaliser votre paiement.</a>'
+        return_to_klarna_checkout: 'Cliquez ici si vous souhaitez revenir à la caisse Klarna pour finaliser votre paiement.'
     form:
         gateway_configuration:
             username: 'Nom d''utilisateur'
