--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -3,7 +3,7 @@ webgriffe_sylius_klarna_payments:
         processing_payment: '¡Estamos procesando tu pago!'
         please_wait: '¡Espere hasta que vea una nueva página de estado!'
         loading: 'Cargando'
-        return_to_klarna_checkout: '<a href="{redirectUrl}">Haga clic aquí si desea volver al pago de Klarna para completar su pago.</a>'
+        return_to_klarna_checkout: 'Haga clic aquí si desea volver al pago de Klarna para completar su pago.'
     form:
         gateway_configuration:
             username: 'Nombre de usuario'
